@@ -609,11 +609,7 @@ webui.suggest.enable = false
 # Enable only, if the user is logged in.
 # If not set the  default value is  false
 # webui.suggest.loggedinusers.only = true
-#
-# default name of recommender - replaced by user input if present
-webui.suggest.sender = A DSpace user
-# default name of recipient - replaced by user input if present
-webui.suggest.recipient = colleague
+
 
 #### Author and subject links ####
 # link author names back to browse-by-author (if not set, defaults to true)
