@@ -1203,6 +1203,8 @@ org.dspace.app.webui.servlet.FeedServlet.search.name                            
 # The following takes in the feed type (collection or community)
 org.dspace.app.webui.servlet.FeedServlet.search.title                           = The {0}''s search engine
 org.dspace.app.webui.servlet.FeedServlet.search.title.default                   = The DSpace search engine
+org.dspace.app.webui.servlet.SuggestServlet.recipient                           = colleague
+#org.dspace.app.webui.servlet.SuggestServlet.sender                              = A DSpace user
 org.dspace.app.webui.servlet.admin.MetadataFieldRegistryServlet.badelemchar     = The element cannot contain periods, underscores or spaces.
 org.dspace.app.webui.servlet.admin.MetadataFieldRegistryServlet.badqualchar     = The qualifier cannot contain periods, underscores or spaces.
 org.dspace.app.webui.servlet.admin.MetadataFieldRegistryServlet.createfailed    = The requested field could not be created due to an already existing field with an identical name.
